# helium-miner-software

./: .env  .gitignore  LICENSE  README.md  docker-compose.template  docker-compose.yml  dockerfile-compose.yml  gen_docker_compose.py  gen_docker_compose_by_variant.py  how_to_add_new_hotspot.md  moo.txt  notes  pushAll.sh  pyproject.toml  requirements.txt  settings.ini  shipit.sh  test-requirements.txt
.github/: CODEOWNERS  FUNDING.yml  contributing.md  pull_request_template.md
5g/: docker-compose-x86.yml
balena/: balena.yml.bobcat-px30  balena.yml.bobcat-rk3566  balena.yml.controllino  balena.yml.cotx  balena.yml.finestra  balena.yml.linxdot  balena.yml.linxdot-rk3566  balena.yml.linxdot-rkcm3  balena.yml.midas  balena.yml.nebra-indoor1  balena.yml.nebra-indoor2  balena.yml.nebra-outdoor1  balena.yml.nebra-outdoor2  balena.yml.og  balena.yml.pantherx1  balena.yml.pisces  balena.yml.pycom  balena.yml.rak  balena.yml.raspi-indoor  balena.yml.raspi-outdoor  balena.yml.risinghf  balena.yml.rockpi-indoor  balena.yml.rockpi-outdoor  balena.yml.sensecap  balena.yml.syncrobit  balena.yml.syncrobit-rkcm3
dbus/: Dockerfile
dbus-server/: Dockerfile
device-compose-files/: docker-compose-nebra-indoor1.yml  docker-compose-nebra-indoor2.yml  docker-compose-nebra-outdoor1.yml  docker-compose-nebra-outdoor2.yml  docker-compose-pisces.yml  docker-compose-pycom.yml  docker-compose-rockpi.yml  docker-compose-rpi.yml
diagnostics/: Dockerfile  bootstrap.min.css  diagnosticsProgram.py  genHTML.py  index.html  startDiag.sh
gateway-config/: Dockerfile  lsb_release  (+1 more)
(+95 files in other folders)
